# claude-dashboard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.smoke-test  Makefile  README.md  docker-compose.yml  ingest.py  schema.sql  schema.sqlite.sql  start.sh  state.json
.claude/skills/db/: SKILL.md
.github/workflows/: ci.yml  release.yml
api/: .env.example  main.py  project_detection.py  requirements.txt  test_main.py  test_similarity_edges.py
api/db/: __init__.py  embeddings.py  filter_engine.py  llm.py  mail.py  queries.py  rule_filter_scorer.py  semantic_filter_scorer.py  semantic_filters.py  summarizer.py
api/db/importance/: __init__.py  backfill.py  context.py  scorer.py
api/tests/: test_filter_engine.py
docker/: .dockerignore  Dockerfile.api  init-db.sh
docs/: 3way-filter-implementation-report.md  DEV_GUIDE.md
scripts/: create-fixture-sessions.py  smoke-test.sh  verify-endpoints.py
src/: app.rs  app_tests.rs  db.rs  main.rs  project_tree.rs  settings.rs  theme.rs
src/api/: client.rs  mod.rs
src/beads/: loader.rs  mod.rs  widget.rs
src/graph/: layout.rs  mod.rs  quadtree.rs  types.rs
src/mail/: mod.rs  types.rs  widget.rs
