[package]
name = "dashboard-native"
version = "0.1.0"
edition = "2021"
description = "Native Claude Activity Dashboard"
authors = ["Clay Arnold"]

[dependencies]
# GUI
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
egui_plot = "0.29"

# Graph visualization
egui_graphs = "0.21"
petgraph = "0.6"

# HTTP client (kept for potential external API calls)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL encoding
urlencoding = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Random for layout initialization
rand = "0.8"

# Platform directories for settings
dirs = "5"

[profile.release]
opt-level = 3
lto = true
